# tinycloud

./: .gitignore  MANIFEST.in  README.md  app.py  auth_pam.py  config.py  config.yaml  dav.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py  vfs.py
core/: mod_manger.py  vfs.py
fs/: .fs_ftp.py.swo  fs_local.py
src/: config.yaml  dav.py  mod_manger.py
src/fs/: fs_ftp.py  fs_local.py
src/static/: index.js  my-element.js.map
static/: index.html
tinycloud/: __main__.py  acl.py  app.py  auth_builtin.py  auth_common.py  auth_pam.py  auth_pass.py  config.py  config.yaml  confmgr.py  dav.py  exceptions.py  fs_common.py  main.py  mod_manger.py  setup.py  share.py  share.py.save  utils.py  vfs.py
tinycloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tinycloud/conf/: acl.yaml  config.yaml
tinycloud/fs/: fs_ftp.py  fs_local.py  fs_syshome.py
tinycloud/static/: README  index.html  index.js  index.js.map  my-element.js
tinycloud/templates/: dav_respone
