[metadata]
name = tinycloud
version = 0.1
description_file = README.md
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Lin calvin
maintainer_email = calvinchaochao@outlook.com

[options]
packages=tinycloud
include_package_data=True 
python_requires = >=3.7
install_requires = 
    importlib-metadata
    click==8.0.4
    Flask==2.0.3
    itsdangerous==2.1.1
    Jinja2==3.0.3
    MarkupSafe==2.1.0
    pam==0.2.0
    python-pam==2.0.2
    six==1.16.0
    Werkzeug==2.0.3
    python-dateutil
    gevent

[options.entry_points]
console_scripts =
    tinycloud = tinycloud.app:main
