[metadata]
name = tinycloud
version = 0.1
description_file = README.md
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Lin calvin
maintainer_email = calvinchaochao@outlook.com

[options]
packages=tinycloud
include_package_data=True 
python_requires = >=3.7
install_requires =
    Flask>=2.0.3
    pam
    python-pam
    python-dateutil
    gevent
    pyyaml
[options.entry_points]
console_scripts =
    tinycloud = tinycloud.main:main
